// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Is bold anchor 1`] = `
.emotion-0 {
  font-weight: 500;
}

<Styled(a)
  className="emotion-0"
  href="http://test.com"
>
  Link
</Styled(a)>
`;

exports[`Is uppercased anchor 1`] = `
.emotion-0 {
  text-transform: uppercase;
}

<Styled(a)
  className="emotion-0"
  href="http://test.com"
>
  Link
</Styled(a)>
`;
